--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,16 @@ h1 {
   line-height: 1.1;
 }
 
+.time {
+  font-size: 4rem;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
