--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,12 @@ h1 {
   line-height: 1.1;
 }
 
+#logo {
+  width: 20rem;
+  padding: 0;
+  margin: 0;
+}
+
 .time {
   font-size: 4rem;
 }
@@ -43,6 +49,8 @@ h1 {
 .flex-container {
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
   gap: 0.5rem;
 }
 
